# RankTheDomain

./: README.md  api_response.json  app.py  celery_config.py  domain_scanner.db  domains.txt  main.py  models.py  project_requirements.txt  pyproject.toml  run_celery_worker.sh  ssl_fix.py  start_services.sh  tasks.py  test_email_security.py
attached_assets/: Pasted-venv-sivaprasath-apples-MacBook-Pro-SubdomainShield-python-app-py-2025-05-05-11-35-05-932-root--1746425128998.txt
backup/: app.py.bak
static/css/: style.css
static/js/: detail.js  main.js  pagination.js
templates/: detail.html  documentation.html  documentation.html.bak  edit_domains.html  index.html  layout.html  linux_setup.html  linux_setup.html.bak  macos_setup.html  macos_setup.html.bak
tools/ssllabs-scan/: go.mod
utils/: dns_check.sh  security_checker.py  security_checker.py.bak  subdomain_scanner.py
